fixed scrollbar display issue on initial load of game

--- a/src/app/(mainroot)/game/[name]/Play.scss
+++ b/src/app/(mainroot)/game/[name]/Play.scss
@@ -40,6 +40,7 @@ html {
     padding-right: 0rem;
     width: 100%;
     min-height: 100vh;
+    overflow: hidden;
     // animation: revealPlay 2000ms cubic-bezier(0.46, 0.03, 0.52, 0.96);
 
     .game-cont {
@@ -70,7 +71,6 @@ html {
             flex-direction: column;
             // justify-content: space-between;
             height: calc(100% + 3.25rem);
-
             .top-cont {
                 padding: 1rem;
                 display: flex;
@@ -676,7 +676,8 @@ html {
     max-width: 1366px;
 
     .adsCont {
-        min-width: 15rem;
+        // min-width: 15rem;
+        min-width: 17rem;
         height: auto;
         
         .titleBar {
@@ -796,7 +797,7 @@ html {
 }
 
 .gameDesc {
-    margin-bottom: -1rem;
+    // margin-bottom: -1rem;
     padding: 1rem;
     width: calc(100% - 2rem);
     background: var(--sub-background);
